--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,10 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo "Installing Maven..."
+      - yum install -y maven
   build:
     commands:
       - echo "Starting Maven build..."
@@ -9,3 +13,4 @@ phases:
 artifacts:
   files:
     - target/*.jar
+    - target/*.war
