--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,22 +2,17 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      java: corretto8
-  pre_build:
     commands:
-      - echo Initializing environment
-      - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain nextwork --domain-owner 123456789012 --region us-east-2 --query authorizationToken --output text`
-
+      - echo "Installing Maven..."
+      - yum install -y maven
+      - echo "Getting CodeArtifact token..."
+      - export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain my-company --domain-owner 249004168001 --region eu-central-1 --query authorizationToken --output text)
+      - echo "Exported token for Maven to use."
   build:
     commands:
-      - echo Build started on `date`
-      - mvn -s settings.xml compile
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - mvn -s settings.xml package
+      - echo "Starting Maven build..."
+      - mvn clean package
 artifacts:
   files:
-    - target/nextwork-web-project.war
-  discard-paths: no
+    - target/*.jar
+    - target/*.war
