added CodeDeploy files.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,3 +16,8 @@ artifacts:
   files:
     - target/*.jar
     - target/*.war
+    - target/nextwork-web-project.war
+    - appspec.yml
+    - scripts/**/*
+  discard-paths: no
+
