--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>nextwork-web-project</finalName>
+    <finalName>jj-project-devops-cicd</finalName>
   </build>
 </project>
